--- a/content/404.md
+++ b/content/404.md
@@ -1,2 +1,1 @@
-This page is no longer here (or never existed!), please go
-[home](#home) if you feel lost.
+This page is no longer here (or never existed!), please go [home](/home.md) if you feel lost.
